--- a/TodoPrism/Views/MainPage.xaml
+++ b/TodoPrism/Views/MainPage.xaml
@@ -2,42 +2,56 @@
     x:Class="TodoPrism.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="using:TodoPrism.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:c="using:TodoPrism.Converters"
-    Style="{StaticResource PageStyle}"
     xmlns:prismMvvm="using:Prism.Windows.Mvvm"
-    prismMvvm:ViewModelLocator.AutoWireViewModel="True" 
+    prismMvvm:ViewModelLocator.AutoWireViewModel="True"
+    Style="{StaticResource PageStyle}"
     mc:Ignorable="d">
-    
+
     <Page.Resources>
-        <c:TodoPriorityToBrushConverter x:Key="PriorityToBrushConverter" 
-                                        HighPriorityBrush="IndianRed" 
-                                        NormalPriorityBrush="Transparent" 
-                                        LowPriorityBrush="LightBlue"/>
-        <c:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+        <c:TodoPriorityToBrushConverter
+            x:Key="PriorityToBrushConverter"
+            HighPriorityBrush="IndianRed"
+            LowPriorityBrush="LightBlue"
+            NormalPriorityBrush="Transparent" />
+        <c:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <CommandBar Grid.Row="0" Style="{StaticResource NavigationViewTitleHeaderContentControlTextStyle}" Content="Teendők" OverflowButtonVisibility="Collapsed">
-            <AppBarButton Icon="Add" Label="Hozzáadás" Click="AddButton_Click"/>
+        <CommandBar
+            Grid.Row="0"
+            Content="Teendők"
+            OverflowButtonVisibility="Collapsed"
+            Style="{StaticResource NavigationViewTitleHeaderContentControlTextStyle}">
+            <AppBarButton
+                Command="{Binding NavigateToAddTodoCommand}"
+                Icon="Add"
+                Label="Hozzáadás" />
         </CommandBar>
-        
-        <ListView Grid.Row="1" ItemsSource="{Binding Todos}" ItemClick="Todos_OnItemClick" IsItemClickEnabled="True">
+
+        <ListView
+            Grid.Row="1"
+            IsItemClickEnabled="True"
+            ItemClick="Todos_OnItemClick"
+            ItemsSource="{Binding Todos}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Background="{Binding Priority, Converter={StaticResource PriorityToBrushConverter}}">
                         <Grid>
-                            <TextBlock Text="{Binding Title}" FontWeight="SemiBold"/>
-                            <SymbolIcon HorizontalAlignment="Right" Symbol="Accept"
-                                        Visibility="{Binding IsDone, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                            <TextBlock FontWeight="SemiBold" Text="{Binding Title}" />
+                            <SymbolIcon
+                                HorizontalAlignment="Right"
+                                Symbol="Accept"
+                                Visibility="{Binding IsDone, Converter={StaticResource BoolToVisibilityConverter}}" />
                         </Grid>
-                        <TextBlock Text="{Binding Deadline}"/>
+                        <TextBlock Text="{Binding Deadline}" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
