Todo delete from TodoDetailsPage added

--- a/TodoPrism/Views/TodoDetailsPage.xaml
+++ b/TodoPrism/Views/TodoDetailsPage.xaml
@@ -26,6 +26,11 @@
                     Command="{Binding SaveTodoCommand}"
                     Icon="Save"
                     Label="Mentés" />
+
+                <AppBarButton
+                    Command="{Binding DeleteTodoCommand}"
+                    Icon="Delete"
+                    Label="Törlés" />
             </CommandBar>
 
             <StackPanel
