--- a/TodoPrism/Views/MainPage.xaml
+++ b/TodoPrism/Views/MainPage.xaml
@@ -43,15 +43,21 @@
             ItemsSource="{Binding Todos}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Background="{Binding Priority, Converter={StaticResource PriorityToBrushConverter}}">
-                        <Grid>
-                            <TextBlock FontWeight="SemiBold" Text="{Binding Title}" />
-                            <SymbolIcon
-                                HorizontalAlignment="Right"
-                                Symbol="Accept"
-                                Visibility="{Binding IsDone, Converter={StaticResource BoolToVisibilityConverter}}" />
-                        </Grid>
-                        <TextBlock Text="{Binding Deadline}" />
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel Margin="0,0,500,0" Background="{Binding Priority, Converter={StaticResource PriorityToBrushConverter}}">
+                            <Grid MinWidth="250">
+                                <TextBlock FontWeight="SemiBold" Text="{Binding Title}" />
+                                <SymbolIcon
+                                    HorizontalAlignment="Right"
+                                    Symbol="Accept"
+                                    Visibility="{Binding IsDone, Converter={StaticResource BoolToVisibilityConverter}}" />
+                            </Grid>
+                            <TextBlock Text="{Binding Deadline}" />
+                        </StackPanel>
+
+                        <Button Background="Transparent" Click="DeleteTodo">
+                            <SymbolIcon Symbol="Delete" />
+                        </Button>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
